Grace/tests/gibbs/errors/t243.grace
// ERROR = P1040
if (false) then {
    print "false"
} elseif true {
    print "true"
}
